Replace personal Twitter link with website GitHub link; fix issue with dark mode

--- a/scss/modules/_front-featured.scss
+++ b/scss/modules/_front-featured.scss
@@ -39,7 +39,7 @@
       z-index: -1;
       top: 0;
       left: 0;
-      background: $white;
+      // background: $white;
       transition: all .3s;
     }
     //&:hover:before {
